test/langtools/tools/javac/valhalla/lworld-values/CheckValueFactoryWithReference.out
CheckValueFactoryWithReference.java:9:28: compiler.err.make.default.with.nonvalue
CheckValueFactoryWithReference.java:11:15: compiler.err.garbled.value.reference.instantiation
2 errors
